--- a/packages/common-sass-client/src/scss/_topbar.scss
+++ b/packages/common-sass-client/src/scss/_topbar.scss
@@ -298,6 +298,7 @@
                 padding:2px 9px;
                 @include border-radius(2px);
                   margin-bottom: 4px;
+                  cursor: pointer;
                   &:hover{
                       background-color:$gray-200;
                   }
