--- a/packages/common-sass/src/scss/_topbar.scss
+++ b/packages/common-sass/src/scss/_topbar.scss
@@ -296,10 +296,12 @@
 
             .profile-name {
               padding:2px 9px;
-              @include border-radius(2px);
+              @include border-radius(4px);
                 margin-bottom: 4px;
+                cursor: pointer;
                 &:hover{
                     background-color:$gray-200;
+                   
                 }
 
             }
