--- a/packages/common-sass/src/scss/custom-components/_aggrid-multiline-column.scss
+++ b/packages/common-sass/src/scss/custom-components/_aggrid-multiline-column.scss
@@ -8,6 +8,7 @@
  @import "~@frontend-appointment/common-sass/src/scss/variables/custom-bootstrap-variable";
  @import '~bootstrap/scss/mixins';
 
+
  .ag-root-wrapper{
     .patient-column{
         margin-top:0.1rem;
@@ -84,14 +85,18 @@
         // display: none;
         .data-image{
             margin-top:2px;
-           width:41px;
-           height: 41px;
+           width:36px;
+           height: 36px;
            margin-right:10px;
            flex-shrink: 0;
+           line-height: 30px;
+        //    @include border-radius(4px !important) ;
+           
 
            img{
-               width: 41px;
-               height: 41px;
+                 width:100%;
+               height: auto;
+            //    @include border-radius(4px !important) ;
            }
         }
 
