--- a/packages/common-sass/src/scss/custom-components/_aggrid.scss
+++ b/packages/common-sass/src/scss/custom-components/_aggrid.scss
@@ -121,13 +121,14 @@ body {
 
 
 .data-image {
-  width: 40px;
-  height: 40px;
+  width:36px;
+  height: 36px;
   border-radius: 50%;
   overflow: hidden;
 
   img {
-    width: 40px;
-    height: 40px;
+    width: 36px;
+    height: 36px;
+    line-height: 30px;
   }
 }
