radio-button-info-information

--- a/packages/common-sass-client/src/scss/_checkbox.scss
+++ b/packages/common-sass-client/src/scss/_checkbox.scss
@@ -125,3 +125,32 @@ input[type="radio"], input[type="checkbox"] {
     }
    
 }
+
+// .status-container{
+//     .form-label{
+//         margin-bottom:4px;
+//     }
+
+//    .form-check{
+//        margin-top:0;
+//        vertical-align:middle;
+//        line-height: 14px;
+//    }
+
+//    .form-check-input[type="radio"]{
+//        margin-top:0;
+//     //    line-height:19px ;
+//    }
+    
+// }
+
+.c-radio,.c-radiosr-only{
+    line-height: 14px;
+    
+   
+}
+
+#label_status,#label_gender{
+    margin-bottom: 1px;
+    
+}
