--- a/packages/common-sass-client/src/scss/pages/_profile-setup.scss
+++ b/packages/common-sass-client/src/scss/pages/_profile-setup.scss
@@ -7,7 +7,7 @@
 
 .add-info {
     .form-check-input[type="radio"] {
-        margin-top: 0.1rem;
+        // margin-top: 0.1rem;
     }
 
 }
@@ -24,6 +24,7 @@
 .form-check{
     display: inline-block;
     margin-right:10px;
+   
 }
 
 .form-check-input[type="radio"] {
@@ -484,6 +485,7 @@
     }
 
 }
+
 
 
 
