--- a/packages/common-sass/src/scss/pages/_profile-setup.scss
+++ b/packages/common-sass/src/scss/pages/_profile-setup.scss
@@ -7,7 +7,7 @@
 
 .add-info {
     .form-check-input[type="radio"] {
-        margin-top: 0.1rem;
+        // margin-top: 0.1rem;
     }
 
 }
@@ -24,6 +24,7 @@
 .form-check{
     display: inline-block;
     margin-right:10px;
+   
 }
 
 .form-check-input[type="radio"] {
@@ -439,6 +440,12 @@
             font-size: 12px;
         }
     }
+
+    .assign-previledge{
+        #scrollbar_menus{
+            height: calc( 100% - 25px);
+        }
+    }
 }
 
 .dash-roles-container{
@@ -478,6 +485,7 @@
     }
 
 }
+
 
 
 
