--- a/packages/apps/admin/src/container/AppointmentLog/appointment-log.scss
+++ b/packages/apps/admin/src/container/AppointmentLog/appointment-log.scss
@@ -63,6 +63,21 @@
         text-transform: uppercase;
         @include border-radius(4px);
     }
+    
+    #status-link-button {
+        color: $gray-600;
+        font-weight: 500;
+        margin-left: 4px;
+        padding: 2px 6px;
+        &.active {
+          color: $gray-900;
+          background-color: lighten($cogent, 45%);
+          @include border-radius(4px);
+          padding: 2px 6px;
+        }
+      }
+    
+
 
     .total-amount{
         display: block;  
@@ -338,6 +353,9 @@
         width          : 50%;
         // padding-left: 4px;
     }
+
+    
+
 
     @media (max-width: 1199px) {
         .hide-on-md {
