--- a/packages/apps/admin/src/container/TransactionLog/transaction-log.scss
+++ b/packages/apps/admin/src/container/TransactionLog/transaction-log.scss
@@ -64,6 +64,20 @@
         @include border-radius(4px);
     }
 
+    #status-link-button {
+        color: $gray-600;
+        font-weight: 500;
+        margin-left: 4px;
+        padding: 2px 6px;
+
+        &.active {
+          color: $gray-900;
+          background-color: lighten($cogent, 45%);
+          @include border-radius(4px);
+          padding: 2px 6px;
+        }
+    }
+
     .total-amount{
         display: block;  
         text-align: right;
