--- a/packages/common-sass-client/src/scss/_checkbox.scss
+++ b/packages/common-sass-client/src/scss/_checkbox.scss
@@ -150,7 +150,8 @@ input[type="radio"], input[type="checkbox"] {
    
 }
 
-#label_status,#label_gender{
+
+#label_status,#label_gender,#label_Status,#label_Gender{
     margin-bottom: 1px;
     
 }
