--- a/packages/ui-elements/src/CHybridPassword/hybrid-password.scss
+++ b/packages/ui-elements/src/CHybridPassword/hybrid-password.scss
@@ -79,8 +79,16 @@
 .field-wrapper .show-btn-pwd{
   position: absolute;
   right:0;
-  top:0;
-  height:38px;
+  top:0px;
+  font-size: 10px;
+  font-weight: 400;
+  text-transform: uppercase;
+
+  -webkit-transition:none !important;
+   transition: none !important;
+   outline: none;
+  
+  // height:30px !important;
   border-top-left-radius:0;
   border-top-right-radius:4px;
   border-bottom-right-radius:4px;
