--- a/packages/common-sass-client/src/scss/_topbar.scss
+++ b/packages/common-sass-client/src/scss/_topbar.scss
@@ -150,7 +150,7 @@
             padding-top:12px;
             padding-bottom:12px;
 
-            &:hover{
+            &:hover,&:focus{
                 text-decoration: none;
 
                 .menu-box{
