--- a/packages/apps/admin/src/container/TransactionLog/transaction-log.scss
+++ b/packages/apps/admin/src/container/TransactionLog/transaction-log.scss
@@ -49,7 +49,7 @@
     }
 
     .badge {
-        width         : 30px;
+        width         : auto;
         height        : auto;
         // top        :50%;
         // left       :50%;
@@ -63,20 +63,21 @@
         text-transform: uppercase;
         @include border-radius(4px);
     }
-
+    
     #status-link-button {
         color: $gray-600;
         font-weight: 500;
         margin-left: 4px;
-        padding: 2px 6px;
-
+        padding:8px 6px;
         &.active {
           color: $gray-900;
           background-color: lighten($cogent, 45%);
           @include border-radius(4px);
-          padding: 2px 6px;
+        //   padding: 2px 6px;
         }
-    }
+      }
+    
+
 
     .total-amount{
         display: block;  
@@ -352,6 +353,9 @@
         width          : 50%;
         // padding-left: 4px;
     }
+
+    
+
 
     @media (max-width: 1199px) {
         .hide-on-md {
