--- a/packages/apps/client/src/container/ClientAppointmentLog/appointment-log.scss
+++ b/packages/apps/client/src/container/ClientAppointmentLog/appointment-log.scss
@@ -49,7 +49,7 @@
     }
 
     .badge {
-        width         : 30px;
+        width         : auto;
         height        : auto;
         // top        :50%;
         // left       :50%;
@@ -68,13 +68,13 @@
         color: $gray-600;
         font-weight: 500;
         margin-left: 4px;
-        padding: 2px 6px;
+        padding: 8px 6px;
 
         &.active {
           color: $gray-900;
           background-color: lighten($cogent, 45%);
           @include border-radius(4px);
-          padding: 2px 6px;
+         
         }
       }
 
