--- a/packages/common-sass/src/scss/custom-components/_aggrid-multiline-column.scss
+++ b/packages/common-sass/src/scss/custom-components/_aggrid-multiline-column.scss
@@ -158,7 +158,7 @@
         color:$gray-900;
     }
     .fa-money{
-        color:$cogent !important;
+        color:$success !important;
     }
 
 }
