--- a/packages/apps/client/src/container/ClientAppointmentApproval/appointment-approval.scss
+++ b/packages/apps/client/src/container/ClientAppointmentApproval/appointment-approval.scss
@@ -51,3 +51,11 @@
     }
 
 }
+
+.transfer-modal{
+    .box{
+        border:1px solid $gray-500;
+        border-radius: $cogent-border;
+    }
+   
+}
