--- a/packages/apps/client/src/container/ClientAppointmentApproval/appointment-approval.scss
+++ b/packages/apps/client/src/container/ClientAppointmentApproval/appointment-approval.scss
@@ -43,6 +43,7 @@
         width          : 50%;
         // padding-left: 4px;
     }
+    
 
     @media (max-width: 1199px) {
         .hide-on-md {
@@ -52,10 +53,20 @@
 
 }
 
-.transfer-modal{
-    .box{
-        border:1px solid $gray-500;
-        border-radius: $cogent-border;
-    }
-   
+.patient-box{
+    border:1px solid $gray-300;
+    border-radius: 0.5rem;
+    padding:15px 0;
+    margin:0 -15px 15px;
 }
+
+.box{
+    border:1px solid $gray-300;
+    border-radius: 0.5rem;
+    // margin:10px;
+    padding:15px 0;
+}
+
+
+   
+
