Data binding of weekdays, wholeWeekOff
Took 1 hour 37 minutes

--- a/packages/apps/admin/src/container/DoctorDutyRosterShiftWise/doctor-duty-roster-shift-wise.scss
+++ b/packages/apps/admin/src/container/DoctorDutyRosterShiftWise/doctor-duty-roster-shift-wise.scss
@@ -209,6 +209,10 @@
   }
 }
 
+.accordion > .card {
+  overflow: visible;
+}
+
 .previledge-title {
   display: flex;
   flex-direction: row-reverse;
@@ -316,6 +320,12 @@
       color: $gray-700;
     }
   }
+}
+
+.inactive{
+  font-weight: 400;
+  color: #595d6e;
+  text-decoration: none;
 }
 
 
