--- a/packages/apps/client/src/container/ClientTransferLog/appointment-approval.scss
+++ b/packages/apps/client/src/container/ClientTransferLog/appointment-approval.scss
@@ -26,18 +26,21 @@
     }
 
     .badge {
-        width         : 35px;
-        height        : 35px;
+        width         : 30px;
+        height        : auto;
         // top        :50%;
         // left       :50%;
         // transform  :translate(-50%,-50%);
         text-align    : center;
         vertical-align: middle;
-        font-size     : 16px;
-        line-height   : 22px;
-        padding       : 6px;
-        @include border-radius(50%);
+        font-size     : 0.65rem;
+        line-height   : 0.8rem;
+        padding       : 6px 8px;
+        
+        text-transform: uppercase;
+        @include border-radius(4px);
     }
+
 
     .react-datepicker-wrapper {
         width          : 50%;
