transfer-log-preview

--- a/packages/ui-elements/src/CHybridPassword/hybrid-password.scss
+++ b/packages/ui-elements/src/CHybridPassword/hybrid-password.scss
@@ -80,6 +80,7 @@
   position: absolute;
   right:0;
   top:0px;
+  height: 36px;
   font-size: 10px;
   font-weight: 400;
   text-transform: uppercase;
