--- a/packages/apps/admin/src/container/AppointmentApproval/appointment-approval.scss
+++ b/packages/apps/admin/src/container/AppointmentApproval/appointment-approval.scss
@@ -7,6 +7,7 @@
 @import "~@frontend-appointment/common-sass/src/scss/variables/custom-bootstrap-variable";
 @import '~bootstrap/scss/mixins';
 
+
 #appointment-approval {
 
     .appointment-badge {
@@ -43,6 +44,7 @@
         width          : 50%;
         // padding-left: 4px;
     }
+    
 
     @media (max-width: 1199px) {
         .hide-on-md {
@@ -51,3 +53,82 @@
     }
 
 }
+
+.patient-box{
+    border:1px solid $gray-300;
+    
+    @include border-radius(0.5rem);
+    padding:15px 0;
+    margin:0 -15px 15px;
+}
+
+.box{
+    border:1px solid $gray-300;
+    @include border-radius(0.5rem);
+    // margin:10px;
+    padding:15px 0;
+    min-height: 582px;
+}
+
+.doctor-box{
+    border:1px solid $gray-300;
+    @include border-radius(4px);
+    background-color: #f8f9fa;
+    padding:27px 8px;
+    margin-bottom:35px;
+    position: relative;
+
+    .doctor-label{
+        color: #6c757d !important;
+        position: absolute;
+        top: -8px;
+        left: 12px;
+        z-index: 2;
+        background-color: white;
+        font-size: 0.65rem;
+        padding: 0 5px;
+        border-radius: 4px;
+    }
+
+    .di-column{
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        .data-image{
+            margin-top:2px;
+           width:55px;
+           height: 55px;
+           margin-right:10px;
+           flex-shrink: 0;
+           line-height: 30px;
+        //    @include border-radius(4px !important) ;
+           
+
+           img{
+                 width:100%;
+               height: auto;
+            //    @include border-radius(4px !important) ;
+           }
+        }
+
+       .di-details{
+           margin:0;
+                li{
+                   line-height: 20px; 
+
+                   &:nth-child(2){
+                    font-size: 0.75rem;
+                    font-weight: 500;
+                    line-height: 20px;
+                    font-weight: $gray-300;
+                    color:$gray-600;
+                   }
+                }
+       }
+    }
+
+}
+
+
+   
+
