--- a/packages/apps/client/src/container/ClientAppointmentApproval/appointment-approval.scss
+++ b/packages/apps/client/src/container/ClientAppointmentApproval/appointment-approval.scss
@@ -54,19 +54,24 @@
 }
 
 .patient-box{
-    border:1px solid $gray-300;
-    
+    //border:1px solid $gray-300;
     @include border-radius(0.5rem);
     padding:15px 0;
     margin:0 -15px 15px;
 }
 
 .box{
-    border:1px solid $gray-300;
-    @include border-radius(0.5rem);
+    // border:1px solid $gray-300;
+    // @include border-radius(0.5rem);
     // margin:10px;
     padding:15px 0;
     min-height: 510px;
+}
+
+.box-1{
+    @include border-radius(0.5rem);
+    //border-right:1px solid $gray-400;
+    background-color:$gray-100;
 }
 
 .doctor-box{
