--- a/packages/apps/admin/src/container/RoomSetup/room-setup.scss
+++ b/packages/apps/admin/src/container/RoomSetup/room-setup.scss
@@ -8,17 +8,20 @@
 @import "~@frontend-appointment/common-sass/src/scss/variables/custom-bootstrap-variable";
 @import '~bootstrap/scss/mixins';
 
-#qualification-alias{
+#room-setup{
   .table-header,.table-body{
     tr td{
       &:nth-child(1){
-        width:40%;
+        width:30%;
       }
 
       &:nth-child(2){
-        width:40%;
+        width:30%;
       }
       &:nth-child(3){
+        width:20%;
+      }
+      &:nth-child(4){
         width:20%;
       }
     }
