--- a/packages/common-sass-client/src/scss/pages/_login.scss
+++ b/packages/common-sass-client/src/scss/pages/_login.scss
@@ -52,9 +52,10 @@ height: auto;
 }
 
 .logo-image{
-width:130px;
-height: auto;
-text-align: center;
+  width:180px;
+  height: auto;
+  padding:30px 0;
+  text-align: center;
 }
 
 .login-wrapper{   
