--- a/packages/apps/admin/src/container/ClientApiIntegration/client-api-integration.scss
+++ b/packages/apps/admin/src/container/ClientApiIntegration/client-api-integration.scss
@@ -80,3 +80,19 @@
    
 }
 
+.api-info{
+    .header{
+        .header-fields{
+           
+            &:nth-child(2){
+                width:calc(70% - 130px) ;
+                padding-right:15px;
+            }
+
+            &:nth-child(3){
+                padding-right:0;
+            }
+    }
+}
+}
+
