--- a/packages/common-sass-client/src/scss/pages/_profile-setup.scss
+++ b/packages/common-sass-client/src/scss/pages/_profile-setup.scss
@@ -487,8 +487,8 @@
 }
 
 .multiple-select{
-    // min-height: 44px;
-    // margin-bottom:30px;
+    min-height: 54px;
+    margin-bottom:20px;
 }
 
 
