--- a/packages/common-sass/src/scss/_sidebar.scss
+++ b/packages/common-sass/src/scss/_sidebar.scss
@@ -353,6 +353,7 @@
       position          : relative;
       overflow          : hidden;
       margin            : 0;
+      margin-top        :-2px;
       padding           : 0;
       font-size         : 0;
       text-indent       : -9999px;
@@ -473,10 +474,7 @@
     top     : 10%
   } */
 
-  .sidebar-header button {
-    // margin-left: 30px;
-
-  }
+ 
 
   .no-child {
     padding: 1rem 0rem 1rem 1.6rem;
