--- a/packages/common-sass-client/src/scss/_sidebar.scss
+++ b/packages/common-sass-client/src/scss/_sidebar.scss
@@ -94,6 +94,7 @@
     /*transition: all 0.5s ease;*/
 
     .sidebar-header{
+      padding:1rem 1.2rem;
       .logo-small{
         display:none;
       }
