--- a/packages/apps/admin/src/container/ClientApiIntegration/client-api-integration.scss
+++ b/packages/apps/admin/src/container/ClientApiIntegration/client-api-integration.scss
@@ -124,3 +124,25 @@
     }
 }
 
+.request-method{
+
+    .badge-primary{
+        background-color: #61affe;
+    }
+   .badge-success{
+    background-color: #49cc90;
+   }
+
+   .badge-warning{
+    background-color:  #fca130;
+   }
+
+   .badge-danger{
+    background-color:  #f93e3e;
+   }
+
+   .badge-info{
+       background-color: #57e3c3;
+    }
+}
+
