--- a/packages/apps/admin/src/container/BillingMode/billing-mode.scss
+++ b/packages/apps/admin/src/container/BillingMode/billing-mode.scss
@@ -8,7 +8,7 @@
 @import "~@frontend-appointment/common-sass/src/scss/variables/custom-bootstrap-variable";
 @import '~bootstrap/scss/mixins';
 
-#university-setup{
+#billing-setup{
   .table-header,.table-body{
     tr td{
       &:nth-child(1){
@@ -16,10 +16,10 @@
       }
 
       &:nth-child(2){
-        width:20%;
+        width:15%;
       }
       &:nth-child(3){
-        width:20%;
+        width:25%;
       }
       &:nth-child(4){
         width:15%;
