--- a/packages/common-sass/src/scss/_custom-mixins.scss
+++ b/packages/common-sass/src/scss/_custom-mixins.scss
@@ -1,5 +1,5 @@
 @import "./mixins/avatars";
-// @import "./mixins/borders";
+@import "./mixins/borders";
 // @import "./mixins/buttons";
 // @import "./mixins/card-accent";
 // @import "./mixins/list-group";
