--- a/packages/apps/client/src/container/ClientDepartmentDutyRoster/department-duty-roster.scss
+++ b/packages/apps/client/src/container/ClientDepartmentDutyRoster/department-duty-roster.scss
@@ -16,6 +16,10 @@
  @include border-radius($cogent-radius);
  }
 
+ .alert{
+     z-index: 999999999;
+ }
+
  .info-container{
    
     padding-right:0
