--- a/packages/common-sass-client/src/scss/mixins/_borders.scss
+++ b/packages/common-sass-client/src/scss/mixins/_borders.scss
@@ -1,31 +1,46 @@
-@mixin borders($borders) {
-  @each $border in $borders {
-    $direction: nth($border, 1);
-    @if $direction == "all" {
-      $size: map-get(map-get($borders, $direction), size);
-      $style: map-get(map-get($borders, $direction), style);
-      $color: map-get(map-get($borders, $direction), color);
-      border: $size $style $color;
-    } @else if $direction == "top" {
-      $size: map-get(map-get($borders, $direction), size);
-      $style: map-get(map-get($borders, $direction), style);
-      $color: map-get(map-get($borders, $direction), color);
-      border-top: $size $style $color;
-    } @else if $direction == "right" {
-      $size: map-get(map-get($borders, $direction), size);
-      $style: map-get(map-get($borders, $direction), style);
-      $color: map-get(map-get($borders, $direction), color);
-      border-right: $size $style $color;
-    } @else if $direction == "bottom" {
-      $size: map-get(map-get($borders, $direction), size);
-      $style: map-get(map-get($borders, $direction), style);
-      $color: map-get(map-get($borders, $direction), color);
-      border-bottom: $size $style $color;
-    } @else if $direction == "left" {
-      $size: map-get(map-get($borders, $direction), size);
-      $style: map-get(map-get($borders, $direction), style);
-      $color: map-get(map-get($borders, $direction), color);
-      border-left: $size $style $color;
-    }
-  }
+// @mixin borders($borders) {
+//   @each $border in $borders {
+//     $direction: nth($border, 1);
+//     @if $direction == "all" {
+//       $size: map-get(map-get($borders, $direction), size);
+//       $style: map-get(map-get($borders, $direction), style);
+//       $color: map-get(map-get($borders, $direction), color);
+//       border: $size $style $color;
+//     } @else if $direction == "top" {
+//       $size: map-get(map-get($borders, $direction), size);
+//       $style: map-get(map-get($borders, $direction), style);
+//       $color: map-get(map-get($borders, $direction), color);
+//       border-top: $size $style $color;
+//     } @else if $direction == "right" {
+//       $size: map-get(map-get($borders, $direction), size);
+//       $style: map-get(map-get($borders, $direction), style);
+//       $color: map-get(map-get($borders, $direction), color);
+//       border-right: $size $style $color;
+//     } @else if $direction == "bottom" {
+//       $size: map-get(map-get($borders, $direction), size);
+//       $style: map-get(map-get($borders, $direction), style);
+//       $color: map-get(map-get($borders, $direction), color);
+//       border-bottom: $size $style $color;
+//     } @else if $direction == "left" {
+//       $size: map-get(map-get($borders, $direction), size);
+//       $style: map-get(map-get($borders, $direction), style);
+//       $color: map-get(map-get($borders, $direction), color);
+//       border-left: $size $style $color;
+//     }
+//   }
+// }
+
+@mixin border-radii($topleft, $topright, $bottomright, $bottomleft) {
+	border-top-left-radius: $topleft;
+	border-top-right-radius: $topright;
+	border-bottom-right-radius: $bottomright;
+	border-bottom-left-radius: $bottomleft;
+	-webkit-border-top-left-radius: $topleft;
+	-webkit-border-top-right-radius: $topright;
+	-webkit-border-bottom-right-radius: $bottomright;
+	-webkit-border-bottom-left-radius: $bottomleft;
+	-moz-border-radius-topleft: $topleft;
+	-moz-border-radius-topright: $topright;
+	-moz-border-radius-bottomright: $bottomright;
+	-moz-border-radius-bottomleft: $bottomleft;
 }
