--- a/packages/apps/admin/src/container/TransferLog/transfer-log.scss
+++ b/packages/apps/admin/src/container/TransferLog/transfer-log.scss
@@ -26,7 +26,7 @@
     }
 
     .badge {
-        width         : 30px;
+        width         : auto;
         height        : auto;
         // top        :50%;
         // left       :50%;
@@ -40,6 +40,19 @@
         text-transform: uppercase;
         @include border-radius(4px);
     }
+    
+    #status-link-button {
+        color: $gray-600;
+        font-weight: 500;
+        margin-left: 4px;
+        padding:8px 6px;
+        &.active {
+          color: $gray-900;
+          background-color: lighten($cogent, 45%);
+          @include border-radius(4px);
+        //   padding: 2px 6px;
+        }
+      }
 
 
     .react-datepicker-wrapper {
