--- a/packages/common-sass-client/src/scss/_breadcrumb.scss
+++ b/packages/common-sass-client/src/scss/_breadcrumb.scss
@@ -13,6 +13,7 @@
 
   .breadcrumb-item {
     font-size:0.8rem;
+    line-height: 2rem;
 
     // The separator between breadcrumbs (by default, a forward-slash: "/")
     + .breadcrumb-item {
