--- a/packages/common-sass-client/src/scss/_breadcrumb.scss
+++ b/packages/common-sass-client/src/scss/_breadcrumb.scss
@@ -4,7 +4,7 @@
     padding:0;
     //padding:0.5rem;
     height:36px;
-  
+
     margin-bottom: 1px;
     list-style: none;
     background-color: transparent;
@@ -14,6 +14,11 @@
   .breadcrumb-item {
     font-size:0.8rem;
     line-height: 2rem;
+
+    .fa {
+      line-height: 2rem;
+      margin-right: 2px;
+    }
 
     // The separator between breadcrumbs (by default, a forward-slash: "/")
     + .breadcrumb-item {
