--- a/packages/common-sass/src/scss/_breadcrumb.scss
+++ b/packages/common-sass/src/scss/_breadcrumb.scss
@@ -4,7 +4,7 @@
     padding:0;
     height:36px;
     //padding:0.5rem;
-  
+
     margin-bottom: 1px;
     list-style: none;
     background-color: transparent;
@@ -15,6 +15,10 @@
     font-size:0.8rem;
     line-height: 2rem;
 
+    .fa {
+      line-height: 2rem;
+      margin-right: 2px;
+    }
 
     // The separator between breadcrumbs (by default, a forward-slash: "/")
     + .breadcrumb-item {
