--- a/packages/common-sass-client/src/scss/_modal.scss
+++ b/packages/common-sass-client/src/scss/_modal.scss
@@ -42,6 +42,13 @@
             &>{
                 margin:0;
             }
+
+            .modal-buttons{
+                display: flex;
+                flex-direction: row-reverse;
+            }
+
+            
         }
 
         
