--- a/packages/apps/client/src/container/ClientAppointCheckinQuickMenu/appointment-approval.scss
+++ b/packages/apps/client/src/container/ClientAppointCheckinQuickMenu/appointment-approval.scss
@@ -176,8 +176,7 @@
         height: 42px;
         font-size: 0.9rem;
         font-weight: 500;
-        
-    
+        background-color: darken($primary,10%);
     }
 
 
