--- a/packages/apps/client/src/container/ClientAppointCheckinQuickMenu/appointment-approval.scss
+++ b/packages/apps/client/src/container/ClientAppointCheckinQuickMenu/appointment-approval.scss
@@ -190,6 +190,30 @@
     }
 }
 
+.quick-search{
+    // background-color: $white;
+    margin:0;
+    // padding:10px 0;
+    @include border-radius(0.5rem);
+}
+
+.quick-checkin-table{
+    font-size: 14px;
+
+    
+.ag-header {
+    font-weight: 500;
+    text-transform: capitalize;
+    font-size: 14px;
+    letter-spacing: 0.02rem;
+  
+    border: none;
+    border-bottom: 1px solid $gray-200;
+    // color      :$gray-800;
+  
+  }
+}
+
 
    
 
