--- a/packages/common-sass-client/src/scss/_messages.scss
+++ b/packages/common-sass-client/src/scss/_messages.scss
@@ -99,3 +99,28 @@
         // text-transform: uppercase;
     }
 }
+
+.overlay-loading{
+    padding:40px 50px;
+   
+    .message-content{
+        width:100%;
+        text-align: center;
+    }
+    .loader{
+        width:100px;
+    }
+
+    .process-message{
+        font-size: 18px;
+        line-height: 24px;
+        font-weight: 500;
+    }
+
+    span{
+        display: block;
+        margin-top:14px;
+        font-size:16px;
+        // text-transform: uppercase;
+    }
+}
