--- a/packages/apps/admin/src/container/AppointmentStatusByDepartment/appointment-status.scss
+++ b/packages/apps/admin/src/container/AppointmentStatusByDepartment/appointment-status.scss
@@ -142,6 +142,7 @@
    .department-name{
      font-size: 0.85rem;
      margin-top:0;
+     color:$primary;
    }
  
    //  &::before{
@@ -158,7 +159,7 @@
     font-size: 0.8rem;
     font-weight: 400;
     letter-spacing: 0.01rem;
-    margin-top:50px;
+    margin-top:32px;
     margin-bottom:0;
   
   }
