quick-link-topbar

--- a/packages/apps/admin/src/container/AppointmentStatus/appointment-status.scss
+++ b/packages/apps/admin/src/container/AppointmentStatus/appointment-status.scss
@@ -278,6 +278,7 @@
      color: $gray-700;
      font-size: 0.8rem;
      text-transform: capitalize;
+     text-decoration: none;
  
      &::before {
        content: "";
