--- a/packages/apps/client/src/container/ClientAppointmentStatus/appointment-status.scss
+++ b/packages/apps/client/src/container/ClientAppointmentStatus/appointment-status.scss
@@ -275,6 +275,7 @@
     color: $gray-700;
     font-size: 0.8rem;
     text-transform: capitalize;
+    text-decoration: none;
 
     &::before {
       content: "";
