--- a/packages/apps/client/src/container/ClientAppointmentStatusByDepartment/appointment-status.scss
+++ b/packages/apps/client/src/container/ClientAppointmentStatusByDepartment/appointment-status.scss
@@ -348,6 +348,7 @@
     color: $gray-700;
     font-size: 0.85rem;
     text-transform: capitalize;
+    text-decoration: none;
 
     &::before {
       content: "";
