--- a/packages/apps/admin/src/container/AppointmentStatusByDepartment/appointment-status.scss
+++ b/packages/apps/admin/src/container/AppointmentStatusByDepartment/appointment-status.scss
@@ -347,6 +347,7 @@
     color: $gray-700;
     font-size: 0.85rem;
     text-transform: capitalize;
+    text-decoration: none;
 
     &::before {
       content: "";
