--- a/packages/apps/client/src/container/ClientAppointmentCheckinQuickMenu/appointment-approval.scss
+++ b/packages/apps/client/src/container/ClientAppointmentCheckinQuickMenu/appointment-approval.scss
@@ -289,6 +289,11 @@
         margin-bottom:24px;
     }
 
+    .modal-header .close {
+        margin:0;
+        margin-left:auto;
+    }
+
     .modal-body{
         padding:40px;
         padding-top:30px;
